// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-mm5x4a-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-ujnuhl-MuiGrid-root"
    >
      313
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-hiyf8u-MuiGrid-root"
    >
      UQ eSpace works from
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-s5ibf6-MuiGrid-root"
    >
      1975
      <span>
         to 
      </span>
      2018
    </div>
  </div>
</div>
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-mm5x4a-MuiGrid-root"
  />
</div>
`;
